[gd_scene load_steps=6 format=3 uid="uid://dwir86yvkb58k"]

[ext_resource type="Script" path="res://scripts/ActionCard.gd" id="1_p3vlk"]
[ext_resource type="Resource" uid="uid://bt2untt73syi5" path="res://Data/ChefMao.tres" id="2_o53a7"]
[ext_resource type="Texture2D" uid="uid://d82tlytsm30u" path="res://asset/cards/Event Cards/Teyvat Fried Egg.png" id="3_2h5uf"]
[ext_resource type="Texture2D" uid="uid://crv1qwi1udl8" path="res://asset/any-icon.png" id="7_uw4ys"]
[ext_resource type="FontFile" uid="uid://daae2vbx4ng13" path="res://asset/fonts/poppins/Poppins-Black.ttf" id="8_f1hae"]

[node name="ActionCard" type="Control"]
custom_minimum_size = Vector2(85, 167)
layout_mode = 3
anchors_preset = 0
offset_left = 533.0
offset_top = 234.0
offset_right = 622.0
offset_bottom = 401.0
script = ExtResource("1_p3vlk")
card_data = ExtResource("2_o53a7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 7.0
offset_bottom = 6.0
rotation = 6.28319

[node name="CardImg" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 420.0
offset_bottom = 720.0
scale = Vector2(0.2, 0.201)
texture = ExtResource("3_2h5uf")
expand_mode = 3

[node name="CardFrame" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 85.0
offset_bottom = 145.0
expand_mode = 3

[node name="Cost" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -0.999982
offset_right = 35.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.394064, 0.382949)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Cost"]
layout_mode = 0
offset_left = -13.0
offset_top = -21.0
offset_right = 141.0
offset_bottom = 151.0
scale = Vector2(0.4, 0.4)
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/Cost/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_uw4ys")
expand_mode = 3

[node name="CostText" type="Label" parent="Control/Cost"]
texture_filter = 2
layout_mode = 2
offset_left = 5.0753
offset_top = -5.22265
offset_right = 31.0753
offset_bottom = 33.7774
scale = Vector2(1.156, 1)
theme_override_colors/font_color = Color(0.999598, 0.909521, 0.794696, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("8_f1hae")
theme_override_font_sizes/font_size = 27
text = "2"
horizontal_alignment = 1
